--- a/index.html
+++ b/index.html
@@ -21,6 +21,24 @@
 			<div class="col-md-6">
 				<a href="#"><img src="images/logo.png" class="logo" alt="logo"></a>  
 			</div>
+			<div class="col-md-6 text-right">
+				<div class="d-flex justify-content-end">
+					<div class="texts">
+						Subscription end in <br>
+						<span>193</span>
+						days
+					</div>
+					<a href="#" class="notifications">
+						<span class="material-icons"> notifications </span>
+					</a>
+					<a href="#" class="btn btn-user"> 
+						<span class="material-icons">
+							account_circle 
+						</span>
+						<p>User name</p>
+					</a>  
+				</div>
+			</div>
 		</div>
 	</header>
 
