--- a/device-detail.html
+++ b/device-detail.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 	 
-	<header> 
+	<header class="fixed-top"> 
 		<div class="row">
 			<div class="col-md-6">
 				<a href="#"><img src="images/logo.png" class="logo" alt="logo"></a>  
