--- a/device.html
+++ b/device.html
@@ -204,11 +204,12 @@
 								</div>
 							</div> 
 							<div class="tab-pane fade show active" id="tab4" role="tabpanel" aria-labelledby="tab1-tab">
+								<br>
 								<div class="row">
-									<div class="col-md-6"> 
+									<div class="col-6"> 
 										<h1>Location Detail</h1>
 									</div>	 
-									<div class="col-md-6 text-right"> 
+									<div class="col-6 text-right"> 
 										<button class="btn btn-pro">Change</button>
 									</div>	
 										
@@ -221,8 +222,8 @@
 									<div class="col-12"> 
 										<div class="row">
 											<div class="col-md-6"> 
-												<p>Grower: ObnikkhHYcq...</p>
-												<p>Date: Sunday, 20 November 2022 ( GMT +02:00 )</p>
+												<p><span>Grower:</span> ObnikkhHYcq...</p>
+												<p><span>Date:</span> Sunday, 20 November 2022 ( GMT +02:00 )</p>
 												<p>Latitude, Longitude: ( 23,24 )</p>
 												<p>Town: Al Kufrah Town</p>
 											</div>
