--- a/all-devices.html
+++ b/all-devices.html
@@ -58,6 +58,12 @@
 					</span>
 					<a href="#">Status</a>
 				</li>
+				<li>
+					<span class="material-icons">
+						login
+					</span>
+					<a href="#">Logout</a>
+				</li>
 			</ul>
 		</div>
 	</div>
@@ -78,7 +84,7 @@
 					<a href="#" class="notifications">
 						<span class="material-icons"> notifications </span>
 					</a>
-					<a href="#" class="btn btn-user"> 
+					<a href="profile.html" class="btn btn-user"> 
 						<span class="material-icons">
 							account_circle 
 						</span>
@@ -94,7 +100,7 @@
 		</div>
 		<div class="menu-logout pc-x"> 
 			<span class="material-icons">
-				login
+				notifications 
 			</span>
 		</div>
 	</header>
@@ -139,7 +145,7 @@
 		<section class="main">
 			<div class="container"> 
 				<div class="device-detail">
-					<h6>Home /  Device</h6>
+					<h6><a href="home.html">Home</a> /  <a href="all-devices.html">Device</a></h6>
 					<div class="row">
 						<div class="col-md-6"> 
 							<h1>My Devices</h1>
@@ -165,7 +171,7 @@
 								<a href="#" class="btn btn-online">Online</a>
 								<h2>Emerson Effect <span class="material-icons"> keyboard_arrow_down </span></h2>
 								<div class="op">
-									<h3>Lighting  01</h3>
+									<h3><a href="location-detail.html">Lighting  01</a></h3>
 									<h4>HydraOS_46CEE3</h4>
 									<hr>
 								</div>
@@ -198,7 +204,7 @@
 
 									<div class="row listx">
 										<div class="col-md-3">
-											<h3>Lighting  01</h3>
+											<h3><a href="location-detail.html">Lighting  01</a></h3>
 											<h4>HydraOS_46CEE3</h4> 
 											<br>
 											<br>
@@ -256,7 +262,7 @@
 								<a href="#" class="btn btn-online">Online</a>
 								<h2>Emerson Effect <span class="material-icons"> keyboard_arrow_down </span></h2>
 								<div class="op">
-									<h3>Lighting  01</h3>
+									<h3><a href="location-detail.html">Lighting  01</a></h3>
 									<h4>HydraOS_46CEE3</h4>
 									<hr>
 								</div>
@@ -289,7 +295,7 @@
 
 									<div class="row listx">
 										<div class="col-md-3">
-											<h3>Lighting  01</h3>
+											<h3><a href="location-detail.html">Lighting  01</a></h3>
 											<h4>HydraOS_46CEE3</h4> 
 											<br>
 											<br>
@@ -347,7 +353,7 @@
 								<a href="#" class="btn btn-online">Online</a>
 								<h2>Emerson Effect <span class="material-icons"> keyboard_arrow_down </span></h2>
 								<div class="op">
-									<h3>Lighting  01</h3>
+									<h3><a href="location-detail.html">Lighting  01</a></h3>
 									<h4>HydraOS_46CEE3</h4>
 									<hr>
 								</div>
@@ -381,7 +387,7 @@
 
 									<div class="row listx">
 										<div class="col-md-3">
-											<h3>Lighting  01</h3>
+											<h3><a href="location-detail.html">Lighting  01</a></h3>
 											<h4>HydraOS_46CEE3</h4> 
 											<br>
 											<br>
@@ -439,7 +445,7 @@
 								<a href="#" class="btn btn-online">Online</a>
 								<h2>Emerson Effect <span class="material-icons"> keyboard_arrow_down </span></h2>
 								<div class="op">
-									<h3>Lighting  01</h3>
+									<h3><a href="location-detail.html">Lighting  01</a></h3>
 									<h4>HydraOS_46CEE3</h4>
 									<hr>
 								</div>
@@ -473,7 +479,7 @@
 
 									<div class="row listx">
 										<div class="col-md-3">
-											<h3>Lighting  01</h3>
+											<h3><a href="location-detail.html">Lighting  01</a></h3>
 											<h4>HydraOS_46CEE3</h4> 
 											<br>
 											<br>
@@ -531,7 +537,7 @@
 								<a href="#" class="btn btn-disconnected">Disconnected</a>
 								<h2>Emerson Effect <span class="material-icons"> keyboard_arrow_down </span></h2>
 								<div class="op">
-									<h3>Lighting  01</h3>
+									<h3><a href="location-detail.html">Lighting  01</a></h3>
 									<h4>HydraOS_46CEE3</h4>
 									<hr>
 								</div>
@@ -566,7 +572,7 @@
 
 									<div class="row listx">
 										<div class="col-md-3">
-											<h3>Lighting  01</h3>
+											<h3><a href="location-detail.html">Lighting  01</a></h3>
 											<h4>HydraOS_46CEE3</h4> 
 											<br>
 											<br>
@@ -625,7 +631,7 @@
 								<a href="#" class="btn btn-disconnected">Disconnected</a>
 								<h2>Emerson Effect <span class="material-icons"> keyboard_arrow_down </span></h2>
 								<div class="op">
-									<h3>Lighting  01</h3>
+									<h3><a href="location-detail.html">Lighting  01</a></h3>
 									<h4>HydraOS_46CEE3</h4>
 									<hr>
 								</div>
@@ -659,7 +665,7 @@
 
 									<div class="row listx">
 										<div class="col-md-3">
-											<h3>Lighting  01</h3>
+											<h3><a href="location-detail.html">Lighting  01</a></h3>
 											<h4>HydraOS_46CEE3</h4> 
 											<br>
 											<br>
