--- a/device.html
+++ b/device.html
@@ -58,6 +58,12 @@
 					</span>
 					<a href="#">Status</a>
 				</li>
+				<li>
+					<span class="material-icons">
+						login
+					</span>
+					<a href="#">Logout</a>
+				</li>
 			</ul>
 		</div>
 	</div>
@@ -78,7 +84,7 @@
 					<a href="#" class="notifications">
 						<span class="material-icons"> notifications </span>
 					</a>
-					<a href="#" class="btn btn-user"> 
+					<a href="profile.html" class="btn btn-user"> 
 						<span class="material-icons">
 							account_circle 
 						</span>
@@ -94,7 +100,7 @@
 		</div>
 		<div class="menu-logout pc-x"> 
 			<span class="material-icons">
-				login
+				notifications 
 			</span>
 		</div>
 	</header>
@@ -141,7 +147,7 @@
 				<div class="row">
 					<div class="col-md-3">
 						<div class="device-menu">
-							<a href="#" class="all-back">
+							<a href="all-devices.html" class="all-back">
 								<span class="material-icons">
 									arrow_back
 								</span>
@@ -153,6 +159,11 @@
 								<h6>HydraOS_46CEE3 <span>Emerson Effect</span></h6>
 								<h6>bt_count: 22 model ver. 224 <i>Sync: 25 second ago</i></h6> 
 								
+								<button class="btn btn-edit"> 
+									<span class="material-icons">
+										edit 
+									</span>
+								</button>
 							</div>
 
 							<ul class="nav nav-pills flex-column hide" id="myTab" role="tablist">
