--- a/subscription.html
+++ b/subscription.html
@@ -16,6 +16,58 @@
 </head>
 <body>
 	  
+	 
+	<div class="menu-mb pc-x"> 
+		<div class="closex"> 
+			<span class="material-icons">
+				close
+			</span>
+		</div>
+		<div class="end-in">
+			<h5>Subscription end in</h5>
+			<h5><span>193</span> days</h5>
+		</div>
+		<div class="menu-left">
+			<ul class="menu"> 
+				<li>
+					<span class="material-icons">
+						account_circle
+					</span>
+					<a href="profile.html">Profile</a>
+				</li>
+				<li class="active">
+					<span class="material-icons">
+						devices
+					</span>
+					<a href="device-detail.html">Device</a>
+				</li>
+				<li>
+					<span class="material-icons">
+						contactless
+					</span>
+					<a href="#">Connect</a>
+				</li>
+				<li>
+					<span class="material-icons">
+						date_range
+					</span>
+					<a href="#">Subscription</a>
+				</li>
+				<li>
+					<span class="material-icons">
+						analytics
+					</span>
+					<a href="#">Status</a>
+				</li>
+				<li>
+					<span class="material-icons">
+						login
+					</span>
+					<a href="#">Logout</a>
+				</li>
+			</ul>
+		</div>
+	</div>
 
 	
 
@@ -33,7 +85,7 @@
 		</div>
 		<div class="menu-logout pc-x"> 
 			<span class="material-icons">
-				login
+				notifications 
 			</span>
 		</div>
 	</header>
