--- a/profile.html
+++ b/profile.html
@@ -58,6 +58,12 @@
 					</span>
 					<a href="#">Status</a>
 				</li>
+				<li>
+					<span class="material-icons">
+						login
+					</span>
+					<a href="#">Logout</a>
+				</li>
 			</ul>
 		</div>
 	</div>
@@ -78,7 +84,7 @@
 					<a href="#" class="notifications">
 						<span class="material-icons"> notifications </span>
 					</a>
-					<a href="#" class="btn btn-user"> 
+					<a href="profile.html" class="btn btn-user"> 
 						<span class="material-icons">
 							account_circle 
 						</span>
@@ -94,7 +100,7 @@
 		</div>
 		<div class="menu-logout pc-x"> 
 			<span class="material-icons">
-				login
+				notifications 
 			</span>
 		</div>
 	</header>
@@ -177,8 +183,8 @@
 							</div> 
 						</div>
 						<div class="form-group row mb-1" >
-							<label class="col-md-2">Password:</label>
-							<div class="col-md-10">
+							<label class="col-md-2 col-8">Password:</label>
+							<div class="col-md-10 col-2">
 								<button class="btn btn-pro">Change</button>
 							</div> 
 						</div>
@@ -200,7 +206,7 @@
 						<h5>Delete Account</h5>
 						<h6><span>Delete your account and information, your subscription will be eliminate automatically</span></h6>
 						<br>
-						<button class="btn btn-danger">Delete account and cancel subscription</button>
+						<button class="btn btn-danger">Delete  and cancel subscription</button>
 
 
 					</div>
