--- a/all-devices.html
+++ b/all-devices.html
@@ -176,6 +176,29 @@
 									<hr>
 								</div>
 								<div class="option">
+
+
+									<div class="row pc-x">
+										<div class="col-md-6"> 
+											<h3>Dimming</h3> 
+											<div class="d-flex"> 
+												<div class="progress bg-success">
+													<div class="progress-bar" style="width:40%"></div>
+												</div>
+												<p>40%</p>
+											</div>
+										</div>
+										<div class="col-md-6">
+											<h3>DLI / Day</h3>
+											<div class="d-flex"> 
+												<div class="progress bg-dander">
+													<div class="progress-bar" style="width:16%"></div>
+												</div>
+												<p>16%</p>
+											</div>
+										</div>
+									</div>
+									
 									<div class="row op">
 										<div class="col-md-6 col-12"> 
 											<h6><span class="material-icons"> power </span> On: 11:00</h6>
