--- a/all-devices.html
+++ b/all-devices.html
@@ -38,7 +38,7 @@
 					<span class="material-icons">
 						devices
 					</span>
-					<a href="device-detail.html">Device</a>
+					<a href="all-devices.html">Device</a>
 				</li>
 				<li>
 					<span class="material-icons">
@@ -118,7 +118,7 @@
 					<span class="material-icons">
 						devices
 					</span>
-					<a href="device-detail.html">Device</a>
+					<a href="all-devices.html">Device</a>
 				</li>
 				<li>
 					<span class="material-icons">
@@ -171,7 +171,7 @@
 								<a href="#" class="btn btn-online">Online</a>
 								<h2>Emerson Effect <span class="material-icons"> keyboard_arrow_down </span></h2>
 								<div class="op">
-									<h3><a href="location-detail.html">Lighting  01</a></h3>
+									<h3><a href="device.html#1">Lighting  01</a></h3>
 									<h4>HydraOS_46CEE3</h4>
 									<hr>
 								</div>
@@ -227,7 +227,7 @@
 
 									<div class="row listx">
 										<div class="col-md-3">
-											<h3><a href="location-detail.html">Lighting  01</a></h3>
+											<h3><a href="device.html#1">Lighting  01</a></h3>
 											<h4>HydraOS_46CEE3</h4> 
 											<br>
 											<br>
@@ -285,7 +285,7 @@
 								<a href="#" class="btn btn-online">Online</a>
 								<h2>Emerson Effect <span class="material-icons"> keyboard_arrow_down </span></h2>
 								<div class="op">
-									<h3><a href="location-detail.html">Lighting  01</a></h3>
+									<h3><a href="device.html#1">Lighting  01</a></h3>
 									<h4>HydraOS_46CEE3</h4>
 									<hr>
 								</div>
@@ -318,7 +318,7 @@
 
 									<div class="row listx">
 										<div class="col-md-3">
-											<h3><a href="location-detail.html">Lighting  01</a></h3>
+											<h3><a href="device.html#1">Lighting  01</a></h3>
 											<h4>HydraOS_46CEE3</h4> 
 											<br>
 											<br>
@@ -376,7 +376,7 @@
 								<a href="#" class="btn btn-online">Online</a>
 								<h2>Emerson Effect <span class="material-icons"> keyboard_arrow_down </span></h2>
 								<div class="op">
-									<h3><a href="location-detail.html">Lighting  01</a></h3>
+									<h3><a href="device.html#1">Lighting  01</a></h3>
 									<h4>HydraOS_46CEE3</h4>
 									<hr>
 								</div>
@@ -410,7 +410,7 @@
 
 									<div class="row listx">
 										<div class="col-md-3">
-											<h3><a href="location-detail.html">Lighting  01</a></h3>
+											<h3><a href="device.html#1">Lighting  01</a></h3>
 											<h4>HydraOS_46CEE3</h4> 
 											<br>
 											<br>
@@ -468,7 +468,7 @@
 								<a href="#" class="btn btn-online">Online</a>
 								<h2>Emerson Effect <span class="material-icons"> keyboard_arrow_down </span></h2>
 								<div class="op">
-									<h3><a href="location-detail.html">Lighting  01</a></h3>
+									<h3><a href="device.html#1">Lighting  01</a></h3>
 									<h4>HydraOS_46CEE3</h4>
 									<hr>
 								</div>
@@ -502,7 +502,7 @@
 
 									<div class="row listx">
 										<div class="col-md-3">
-											<h3><a href="location-detail.html">Lighting  01</a></h3>
+											<h3><a href="device.html#1">Lighting  01</a></h3>
 											<h4>HydraOS_46CEE3</h4> 
 											<br>
 											<br>
@@ -560,7 +560,7 @@
 								<a href="#" class="btn btn-disconnected">Disconnected</a>
 								<h2>Emerson Effect <span class="material-icons"> keyboard_arrow_down </span></h2>
 								<div class="op">
-									<h3><a href="location-detail.html">Lighting  01</a></h3>
+									<h3><a href="device.html#1">Lighting  01</a></h3>
 									<h4>HydraOS_46CEE3</h4>
 									<hr>
 								</div>
@@ -595,7 +595,7 @@
 
 									<div class="row listx">
 										<div class="col-md-3">
-											<h3><a href="location-detail.html">Lighting  01</a></h3>
+											<h3><a href="device.html#1">Lighting  01</a></h3>
 											<h4>HydraOS_46CEE3</h4> 
 											<br>
 											<br>
@@ -654,7 +654,7 @@
 								<a href="#" class="btn btn-disconnected">Disconnected</a>
 								<h2>Emerson Effect <span class="material-icons"> keyboard_arrow_down </span></h2>
 								<div class="op">
-									<h3><a href="location-detail.html">Lighting  01</a></h3>
+									<h3><a href="device.html#1">Lighting  01</a></h3>
 									<h4>HydraOS_46CEE3</h4>
 									<hr>
 								</div>
@@ -688,7 +688,7 @@
 
 									<div class="row listx">
 										<div class="col-md-3">
-											<h3><a href="location-detail.html">Lighting  01</a></h3>
+											<h3><a href="device.html#1">Lighting  01</a></h3>
 											<h4>HydraOS_46CEE3</h4> 
 											<br>
 											<br>
@@ -772,7 +772,6 @@
 			$(".menu-mb").removeClass("active" , 300);  
 		});
 
-		
 	</script>
  
 </body>
