--- a/subscription.html
+++ b/subscription.html
@@ -39,7 +39,7 @@
 					<span class="material-icons">
 						devices
 					</span>
-					<a href="device-detail.html">Device</a>
+					<a href="all-devices.html">Device</a>
 				</li>
 				<li>
 					<span class="material-icons">
