--- a/profile.html
+++ b/profile.html
@@ -38,7 +38,7 @@
 					<span class="material-icons">
 						devices
 					</span>
-					<a href="device-detail.html">Device</a>
+					<a href="all-devices.html">Device</a>
 				</li>
 				<li>
 					<span class="material-icons">
@@ -118,7 +118,7 @@
 					<span class="material-icons">
 						devices
 					</span>
-					<a href="device-detail.html">Device</a>
+					<a href="all-devices.html">Device</a>
 				</li>
 				<li>
 					<span class="material-icons">
@@ -145,7 +145,7 @@
 		<section class="main">
 			<div class="container"> 
 				<div class="device-detail profile-detail">
-					<h6>Home /  Profile</h6>
+					<h6><a href="home.html">Home</a> /  <a href="profile.html">Profile</a></h6>
 					<div class="row">
 						<div class="col-md-12"> 
 							<h1>Profile</h1>
